<resources>
    <string name="app_name">APM</string>
    <string name="email_hint">Введите Email</string>
    <string name="pass_hint">Введите пароль</string>
    <string name="login_button_text">Вход</string>
    <string name="reg_button_text">Регистрация</string>
    <string name="wrong_login">Неверный логин или пароль</string>
    <string name="reg_completed">Регистрация выполнена</string>
    <string name="empty_reg">Заполните все поля</string>
    <string name="id_title">ID:</string>
    <string name="name_title">Имя:</string>
    <string name="second_name_title">Фамилия:</string>
    <string name="age_title">Возраст:</string>
    <string name="number_of_payments_title">Количество платежей:</string>
    <string name="registration_date_title">Дата регистрации:</string>
    <string name="edit_user_btn_title">Изменить пользователя</string>
    <string name="view_payments_btn_title">Посмотреть платежи</string>
    <string name="add_payment_btn_title">Добавить платеж</string>
    <string name="OK">OK</string>
    <string name="enter_payment_value">Введите сумму оплаты</string>
    <string name="reg_date_info">\"Дата регистрации: \"</string>
    <string name="add_user">Добавить пользователя</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_second_name">Введите фамилию</string>
    <string name="enter_age" >Введите возраст</string>
    <string name="invalid_add">Не все поля заполнены</string>
    <string name="back">Назад</string>
    <string name="search">поиск</string>
    <string name="cancel">Отмена поиска</string>
    <string name="info_about_user">Информация о пользователе:</string>
    <string name="reg_user_title">Регистрация пользователя</string>
    <string name="reg_admin_title">Регистрация сотрудника</string>
    <string name="client">Клиент</string>
    <string name="admin">Сотрудник</string>
    <string name="add_second_name_title">Введите фамилию</string>
    <string name="add_name_title">Введите имя</string>
    <string name="add_age">Введите возраст</string>
    <string name="user_registered">Пользователь зарегистрирован!</string>
    <string name="login_user_button_text">Вход для клиента</string>
    <string name="enter_id_value">Введите id</string>
    <string name="password_short">Пароль слишком короткий, он должен содержать не менее 10 символов</string>
    <string name="exit_account">Выйти из аккаунта</string>
</resources>