<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="8dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/reg_user_title"
        style="?android:textAppearanceLarge"
        />


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:textAppearanceLarge"
            android:text="@string/name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/name_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name_title"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:textAppearanceLarge"
            android:text="@string/second_name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/second_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_second_name_title"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:textAppearanceLarge"
            android:text="@string/age_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/age_user_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:hint="@string/add_age"
            android:layout_marginRight="12dp"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/reg_user_button"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/chat_text"
        android:background="@drawable/edit_button"
        android:layout_marginTop="36dp"
        android:text="@string/add_user"/>

</LinearLayout>