<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


        <EditText
            android:id="@+id/email_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_log_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/pass_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:layout_marginTop="32dp"
            android:text="@string/login_button_text"
            android:textColor="@color/chat_text"/>

        <Button
            android:id="@+id/login_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:layout_marginTop="32dp"
            android:padding="8dp"
            android:text="@string/login_user_button_text"
            android:textColor="@color/chat_text"/>

        <Button
            android:id="@+id/reg_log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/edit_button"
            android:padding="8dp"
            android:text="@string/reg_button_text"
            android:textColor="@color/chat_text"/>
    </LinearLayout>