<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:textAppearanceLarge"
        android:text="@string/info_about_user"
        android:gravity="center"/>


    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:text="@string/id_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:text="@string/name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:text="@string/second_name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/second_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:textSize="20dp"
            android:text="@string/age_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/age_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceMedium"
            android:layout_marginRight="12dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/number_of_payments_title"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/number_of_payments_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:textAppearanceMedium"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

    <TextView
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:text="@string/registration_date_title"/>

    <TextView
        android:id="@+id/date_text"
        style="?android:textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        />
    </LinearLayout>


        <Button
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/edit_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:text="@string/edit_user_btn_title"
            android:padding="4dp"
            android:layout_gravity="center"
            android:textColor="@color/chat_text"/>

        <Button
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            android:id="@+id/view_payments_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:text="@string/view_payments_btn_title"
            android:layout_gravity="center"
            android:textColor="@color/chat_text"/>

        <Button
            android:padding="8dp"
            android:id="@+id/add_payment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_button"
            android:text="@string/add_payment_btn_title"
            android:layout_gravity="center"
            android:textColor="@color/chat_text"/>


</LinearLayout>