<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:textAppearanceLarge"
            android:text="@string/name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:textAppearanceLarge"
            android:text="@string/second_name_title"
            android:layout_marginRight="4dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/second_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceLarge"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="@string/age_title" />

        <EditText
            android:id="@+id/age_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:textAppearanceMedium"
            android:layout_marginRight="12dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>